# snax.cdt

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  build.sh  install.sh  uninstall.sh
docker/: install_deb.sh
docs/guides/: cmake.md  first-smart-contract.md  generator-attributes.md  native-tester.md
docs/tools/: snax-abidiff.md  snax-abigen.md  snax-cpp.md  snax-init.md  snax-ld.md
docs/upgrading/: 1.2-to-1.3.md  1.5-to-1.6.md
examples/hello/: CMakeLists.txt  README.txt
examples/hello/include/: hello.hpp
examples/hello/src/: CMakeLists.txt  hello.cpp
examples/hello/tests/: CMakeLists.txt  hello_test.cpp
examples/multi_index_example/: CMakeLists.txt  README.txt
examples/multi_index_example/include/: multi_index_example.hpp
examples/multi_index_example/src/: CMakeLists.txt  multi_index_example.cpp
examples/send_inline/: CMakeLists.txt  README.txt
examples/send_inline/include/: send_inline.hpp
examples/send_inline/src/: CMakeLists.txt  send_inline.cpp
libraries/: CMakeLists.txt
libraries/boost/include/boost/config/detail/: select_platform_config.hpp
libraries/libc/: CMakeLists.txt
libraries/libc++/: CMakeLists.txt
libraries/native/: CMakeLists.txt  crt.cpp  crt.hpp  intrinsics.cpp  intrinsics.hpp  intrinsics_def.hpp  tester.hpp
libraries/native/native/snax/: crt.hpp  intrinsics.hpp  intrinsics_def.hpp  tester.hpp
libraries/rt/: compiler_builtins.cpp
libraries/snaxlib/: CMakeLists.txt  action.h  action.hpp  asset.hpp  binary_extension.hpp  chain.h  contract.hpp  crypto.cpp  crypto.h  crypto.hpp  datastream.hpp  db.h  dispatcher.hpp  fixed_bytes.hpp  ignore.hpp  malloc.cpp  multi_index.hpp  name.hpp  permission.h  permission.hpp  print.h  print.hpp  privileged.h  privileged.hpp  producer_schedule.hpp  public_key.hpp  serialize.hpp  simple_malloc.cpp  singleton.hpp  snax.hpp  snaxlib.cpp  symbol.hpp  system.h  system.hpp  time.hpp  transaction.h  transaction.hpp  types.h  varint.hpp
libraries/snaxlib/capi/snax/: action.h  chain.h  crypto.h  db.h  permission.h  print.h  privileged.h  system.h  transaction.h  types.h
libraries/snaxlib/contracts/snax/: action.hpp  contract.hpp  dispatcher.hpp  multi_index.hpp  permission.hpp  privileged.hpp  producer_schedule.hpp  singleton.hpp  snax.hpp  system.hpp  transaction.hpp
libraries/snaxlib/core/snax/: asset.hpp  binary_extension.hpp  check.hpp  crypto.hpp  datastream.hpp  fixed_bytes.hpp  ignore.hpp  name.hpp  print.hpp  rope.hpp  serialize.hpp  symbol.hpp  time.hpp  varint.hpp
modules/: ClangExternalProject.txt  InstallCDT.cmake  LibrariesExternalProject.txt  SnaxCDTMacros.cmake.in  SnaxLibConfig.cmake.in  SnaxWasmToolchain.cmake.in  TestsExternalProject.txt  ToolsExternalProject.txt  snax.cdt-config.cmake
scripts/: generate_bottle.sh  generate_tarball.sh  snax_build_amazon.sh  snax_build_centos.sh  snax_build_darwin.sh  snax_build_fedora.sh  snax_build_ubuntu.sh
scripts/ricardsnax/: README.md  ricardsnax.py
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  codegen_tests.cpp  contracts.hpp.in  main.cpp  memory_tests.cpp
tests/unit/: CMakeLists.txt  asset_tests.cpp  binary_extension_tests.cpp  crypto_tests.cpp  datastream_tests.cpp  fixed_bytes_tests.cpp  name_tests.cpp  print_tests.cpp  rope_tests.cpp  serialize_tests.cpp  symbol_tests.cpp  system_tests.cpp  time_tests.cpp  varint_tests.cpp
tests/unit/test_contracts/: malloc_tests.cpp  simple_tests.cpp  simple_wrong.abi  transfer.cpp  transfer.hpp
tools/: CMakeLists.txt
tools/abidiff/: CMakeLists.txt  snax-abidiff.cpp.in
tools/abigen/: CMakeLists.txt  snax-abigen.cpp.in
tools/cc/: CMakeLists.txt  snax-cc.cpp.in  snax-cpp.cpp.in
tools/include/: compiler_options.hpp.in
tools/include/snax/: abi.hpp  abigen.hpp  codegen.hpp  gen.hpp  utils.hpp
tools/include/snax/whereami/: whereami.hpp
tools/init/: CMakeLists.txt  snax-init.cpp
tools/ld/: CMakeLists.txt  snax-ld.cpp.in
